tests/baselines/reference/ambientWithStatements.errors.txt
==== tests/cases/compiler/ambientWithStatements.ts (17 errors) ====
    declare module M {
        break;
        ~~~~~
!!! ambientWithStatements.ts(2,5): error TS1036: Statements are not allowed in ambient contexts.
        ~~~~~~
!!! ambientWithStatements.ts(2,5): error TS2202: 'break' statement can only be used within an enclosing iteration or switch statement.
        continue;
        ~~~~~~~~
!!! ambientWithStatements.ts(3,5): error TS1036: Statements are not allowed in ambient contexts.
        ~~~~~~~~~
!!! ambientWithStatements.ts(3,5): error TS2201: 'continue' statement can only be used within an enclosing iteration statement.
        debugger;
        ~~~~~~~~
!!! ambientWithStatements.ts(4,5): error TS1036: Statements are not allowed in ambient contexts.
        do { } while (true);
        ~~
!!! ambientWithStatements.ts(5,5): error TS1036: Statements are not allowed in ambient contexts.
        var x;
        for (x in null) { }
        ~~~
!!! ambientWithStatements.ts(7,5): error TS1036: Statements are not allowed in ambient contexts.
                  ~~~~
!!! ambientWithStatements.ts(7,15): error TS2117: The right-hand side of a 'for...in' statement must be of type 'any', an object type or a type parameter.
        if (true) { } else { }
        ~~
!!! ambientWithStatements.ts(8,5): error TS1036: Statements are not allowed in ambient contexts.
        1;
        ~
!!! ambientWithStatements.ts(9,5): error TS1036: Statements are not allowed in ambient contexts.
        L: var y;
        ~
!!! ambientWithStatements.ts(10,5): error TS1036: Statements are not allowed in ambient contexts.
        return;
        ~~~~~~
!!! ambientWithStatements.ts(11,5): error TS1036: Statements are not allowed in ambient contexts.
        switch (x) {
        ~~~~~~
!!! ambientWithStatements.ts(12,5): error TS1036: Statements are not allowed in ambient contexts.
            case 1:
                break;
            default:
                break;
        }
        throw "nooo";
        ~~~~~
!!! ambientWithStatements.ts(18,5): error TS1036: Statements are not allowed in ambient contexts.
        try {
        ~~~
!!! ambientWithStatements.ts(19,5): error TS1036: Statements are not allowed in ambient contexts.
        }
        catch (e) {
        }
        finally {
        }
        with (x) {
        ~~~~
!!! ambientWithStatements.ts(25,5): error TS1036: Statements are not allowed in ambient contexts.
              ~
!!! ambientWithStatements.ts(25,11): error TS2135: All symbols within a with block will be resolved to 'any'.
        }
    }